fix: getRegion throws StackOverflowError
Happens if the player has no regions